# scion

./: .gitignore  BUILD.bazel  README.md  go.mod  go.sum
acceptance/topo_sd_reload/: BUILD.bazel
docker/: BUILD.bazel
go/cs/: BUILD.bazel  cs.go
go/cs/config/: BUILD.bazel  config.go  sample.go
go/integration/: BUILD.bazel
go/integration/end2end/: BUILD.bazel
go/lib/ctrl/: union.go
go/lib/drkey/: BUILD.bazel  drkey.go  level2.go  secret_value.go
go/lib/drkeystorage/: BUILD.bazel
go/lib/env/: BUILD.bazel
go/lib/integration/: BUILD.bazel  integration.go
go/lib/routemgr/: linux.go  routedb.go  routedb_test.go
go/lib/sciond/: BUILD.bazel  apitypes.go  grpc.go  sciond.go
go/lib/svc/: messages.go
go/pkg/app/: BUILD.bazel  helper.go
go/pkg/cs/: BUILD.bazel  tasks.go
go/pkg/gateway/: BUILD.bazel  gateway.go  pathmonitor.go
go/pkg/grpc/: dialer.go
go/pkg/ping/: ping.go
go/pkg/sciond/: BUILD.bazel  sciond.go
go/pkg/sciond/drkey/: BUILD.bazel
go/pkg/sciond/drkey/grpc/: BUILD.bazel  lvl2_fetcher.go  lvl2_fetching_test.go
go/pkg/showpaths/: BUILD.bazel  showpaths.go
go/pkg/storage/: BUILD.bazel  storage.go
go/pkg/trust/: BUILD.bazel  signer_gen.go  tls_handshake.go  transport_credentials.go
go/pktgen/: BUILD.bazel  pktgen.go
go/posix-gateway/: BUILD.bazel  main.go
go/posix-gateway/config/: config.go
go/scion/: BUILD.bazel  ping.go  showpaths.go  traceroute.go
go/scion-pki/certs/: BUILD.bazel  renew.go
go/sciond/: BUILD.bazel  main.go
proto/: drkey_mgmt.capnp
scripts/cryptoplayground/: trc_ceremony.sh
(+73 files in other folders)
